[gd_scene load_steps=63 format=2]

[ext_resource path="res://Level 1/L1_Buildings.png" type="Texture" id=1]
[ext_resource path="res://Level 1/5.png" type="Texture" id=2]
[ext_resource path="res://Level 1/7.png" type="Texture" id=3]
[ext_resource path="res://Level 1/L1_Fence.png" type="Texture" id=4]
[ext_resource path="res://Level 1/L1_HouseShrubbery.png" type="Texture" id=5]
[ext_resource path="res://Level 1/2.png" type="Texture" id=6]
[ext_resource path="res://Level 1/4.png" type="Texture" id=7]
[ext_resource path="res://Level 1/8.png" type="Texture" id=8]
[ext_resource path="res://Level 1/9.png" type="Texture" id=9]
[ext_resource path="res://Level 1/6.png" type="Texture" id=10]
[ext_resource path="res://Level 1/L1_Grass.png" type="Texture" id=11]
[ext_resource path="res://Level 1/10.png" type="Texture" id=12]
[ext_resource path="res://Level 1/L1_GrassInFrontOfDumpsterandFence.png" type="Texture" id=13]
[ext_resource path="res://Level 1/1.png" type="Texture" id=14]
[ext_resource path="res://Level 1/3.png" type="Texture" id=15]
[ext_resource path="res://Level 1/L1_Sun.png" type="Texture" id=16]
[ext_resource path="res://Level 1/L1_Dumpster.png" type="Texture" id=17]
[ext_resource path="res://Level 1/L1_BGPineTrees.png" type="Texture" id=18]
[ext_resource path="res://Level 1/L1_TallTrees.png" type="Texture" id=19]
[ext_resource path="res://Level 1/L1_Sky.png" type="Texture" id=20]
[ext_resource path="res://Level 1/L1_Mountains.png" type="Texture" id=21]
[ext_resource path="res://Level 1/18.png" type="Texture" id=22]
[ext_resource path="res://Level 1/12.png" type="Texture" id=23]
[ext_resource path="res://Level 1/19.png" type="Texture" id=24]
[ext_resource path="res://Level 1/13.png" type="Texture" id=25]
[ext_resource path="res://Level 1/15.png" type="Texture" id=26]
[ext_resource path="res://Level 1/11.png" type="Texture" id=27]
[ext_resource path="res://Level 1/16.png" type="Texture" id=28]
[ext_resource path="res://Level 1/17.png" type="Texture" id=29]
[ext_resource path="res://Level 1/14.png" type="Texture" id=30]
[ext_resource path="res://Level 1/20.png" type="Texture" id=31]
[ext_resource path="res://Level 1/L1_ResetPointFront.png" type="Texture" id=32]
[ext_resource path="res://Level 1/CLIMBINDICATOR.png" type="Texture" id=33]
[ext_resource path="res://Level 1/26.png" type="Texture" id=34]
[ext_resource path="res://Level 1/29.png" type="Texture" id=35]
[ext_resource path="res://Level 1/30.png" type="Texture" id=36]
[ext_resource path="res://Level 1/31.png" type="Texture" id=37]
[ext_resource path="res://Level 1/25.png" type="Texture" id=38]
[ext_resource path="res://Level 1/21.png" type="Texture" id=39]
[ext_resource path="res://Level 1/23.png" type="Texture" id=40]
[ext_resource path="res://Level 1/L1_START_INTERIOR.png" type="Texture" id=41]
[ext_resource path="res://Level 1/22.png" type="Texture" id=42]
[ext_resource path="res://Level 1/24.png" type="Texture" id=43]
[ext_resource path="res://Level 1/27.png" type="Texture" id=44]
[ext_resource path="res://Level 1/32.png" type="Texture" id=45]
[ext_resource path="res://Level 1/28.png" type="Texture" id=46]
[ext_resource path="res://Player_Raccoon/Player.tscn" type="PackedScene" id=47]
[ext_resource path="res://Level 1/ClimbArea.gd" type="Script" id=48]
[ext_resource path="res://Level 1/Level1.gd" type="Script" id=49]
[ext_resource path="res://Level 1/Grass-1.png" type="Texture" id=50]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 10, 105.5 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 9.50003, 77.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 11.125, 74.2189 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 10, 49.5 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 76, 15.5 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 124, 1 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1023.5, 89.5 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 80.5, 4 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 80.375, 1.5 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 97.5, 1.5 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 71.5, 1 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 9.5, 355 )

[node name="Level1" type="Node2D"]
script = ExtResource( 49 )

[node name="Sky" type="Sprite" parent="."]
texture = ExtResource( 20 )

[node name="Sun" type="Sprite" parent="."]
texture = ExtResource( 16 )

[node name="Mountains" type="Sprite" parent="."]
texture = ExtResource( 21 )

[node name="BGPineTrees" type="Sprite" parent="."]
texture = ExtResource( 18 )

[node name="Grass" type="Sprite" parent="."]
position = Vector2( -3, 1 )
texture = ExtResource( 11 )

[node name="TallTrees" type="Sprite" parent="."]
texture = ExtResource( 19 )

[node name="Fence" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Sprite1" type="Sprite" parent="."]
texture = ExtResource( 14 )

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 6 )

[node name="Sprite3" type="Sprite" parent="."]
texture = ExtResource( 15 )

[node name="Buildings" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ResetPoint" type="Sprite" parent="."]
visible = false
position = Vector2( -925, 121 )
texture = ExtResource( 41 )

[node name="ResetPointFront" type="Sprite" parent="."]
position = Vector2( -894, 116 )
texture = ExtResource( 32 )
offset = Vector2( 0.25, 0.5 )

[node name="Dumpster" type="Sprite" parent="."]
texture = ExtResource( 17 )

[node name="ClimbIndicator" type="Sprite" parent="."]
position = Vector2( -43, 204 )
texture = ExtResource( 33 )

[node name="GrassINFRONT" type="Sprite" parent="."]
texture = ExtResource( 13 )

[node name="HouseShrubbery" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="Sprite4" type="Sprite" parent="."]
texture = ExtResource( 7 )

[node name="Sprite5" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Sprite6" type="Sprite" parent="."]
texture = ExtResource( 10 )

[node name="Sprite7" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Sprite8" type="Sprite" parent="."]
texture = ExtResource( 8 )

[node name="Sprite9" type="Sprite" parent="."]
texture = ExtResource( 9 )

[node name="Sprite10" type="Sprite" parent="."]
texture = ExtResource( 12 )

[node name="Sprite11" type="Sprite" parent="."]
texture = ExtResource( 27 )

[node name="Sprite12" type="Sprite" parent="."]
texture = ExtResource( 23 )

[node name="Sprite13" type="Sprite" parent="."]
texture = ExtResource( 25 )

[node name="Sprite14" type="Sprite" parent="."]
texture = ExtResource( 30 )

[node name="Sprite15" type="Sprite" parent="."]
texture = ExtResource( 26 )

[node name="Sprite16" type="Sprite" parent="."]
texture = ExtResource( 28 )

[node name="Sprite17" type="Sprite" parent="."]
texture = ExtResource( 29 )

[node name="Sprite18" type="Sprite" parent="."]
texture = ExtResource( 22 )

[node name="Sprite19" type="Sprite" parent="."]
texture = ExtResource( 24 )

[node name="Sprite20" type="Sprite" parent="."]
texture = ExtResource( 31 )

[node name="Sprite21" type="Sprite" parent="."]
texture = ExtResource( 39 )

[node name="Sprite22" type="Sprite" parent="."]
texture = ExtResource( 42 )

[node name="Sprite23" type="Sprite" parent="."]
texture = ExtResource( 40 )

[node name="Sprite24" type="Sprite" parent="."]
texture = ExtResource( 43 )

[node name="Sprite25" type="Sprite" parent="."]
texture = ExtResource( 38 )

[node name="Sprite26" type="Sprite" parent="."]
texture = ExtResource( 34 )

[node name="Sprite27" type="Sprite" parent="."]
texture = ExtResource( 44 )

[node name="Sprite28" type="Sprite" parent="."]
texture = ExtResource( 46 )

[node name="Sprite29" type="Sprite" parent="."]
texture = ExtResource( 35 )

[node name="Sprite30" type="Sprite" parent="."]
texture = ExtResource( 36 )

[node name="Sprite31" type="Sprite" parent="."]
texture = ExtResource( 37 )

[node name="Sprite32" type="Sprite" parent="."]
texture = ExtResource( 45 )

[node name="ClimbArea" type="Area2D" parent="." groups=["Climb"]]
collision_mask = 0
script = ExtResource( 48 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClimbArea"]
position = Vector2( -852.25, -142.5 )
shape = SubResource( 13 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ClimbArea"]
position = Vector2( -40.5, 201.5 )
shape = SubResource( 14 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="ClimbArea"]
position = Vector2( -868, 212.219 )
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="ClimbArea"]
position = Vector2( -867, 57.5 )
shape = SubResource( 11 )

[node name="Area2DAllways" type="Area2D" parent="." groups=["Ground", "OpenDir"]]
collision_layer = 32785
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2DAllways" groups=["Ground", "NoStaticBody"]]
modulate = Color( 0, 1, 0, 1 )
position = Vector2( -246, 108.5 )
shape = SubResource( 10 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Area2DAllways" groups=["NoStaticBody"]]
visible = false
modulate = Color( 0, 1, 0, 1 )
position = Vector2( -945, -65 )
shape = SubResource( 16 )
disabled = true

[node name="CollisionShape2D3" type="CollisionPolygon2D" parent="Area2DAllways" groups=["Ground"]]
modulate = Color( 0, 1, 0, 1 )
position = Vector2( -983, -34 )
polygon = PoolVector2Array( -67, -25, 157, -25, 184, 42, -68, 43 )

[node name="CollisionShape2D4" type="CollisionPolygon2D" parent="Area2DAllways" groups=["Ground", "NoStaticBody"]]
modulate = Color( 0, 1, 0, 1 )
position = Vector2( -983, -272 )
polygon = PoolVector2Array( -67, -25, 157, -24, 186, 42, -68, 43 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DAllways" groups=["Ground"]]
modulate = Color( 0, 1, 0, 1 )
position = Vector2( -0.5, 360.5 )
shape = SubResource( 5 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Area2DAllways" groups=["Ground", "NoStaticBody"]]
modulate = Color( 0, 1, 0, 1 )
position = Vector2( -92.5, 97 )
shape = SubResource( 18 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Area2DAllways" groups=["Ground", "NoStaticBody"]]
modulate = Color( 0, 1, 0, 1 )
position = Vector2( -92, 122.5 )
shape = SubResource( 15 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Area2DAllways" groups=["NoStaticBody"]]
visible = false
modulate = Color( 0, 1, 0, 1 )
position = Vector2( -918.5, -302.5 )
shape = SubResource( 17 )
disabled = true

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Area2DAllways" groups=["NoStaticBody"]]
visible = false
modulate = Color( 0, 1, 0, 1 )
position = Vector2( -902, 10 )
shape = SubResource( 16 )
disabled = true

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Area2DAllways" groups=["NoStaticBody"]]
visible = false
modulate = Color( 0, 1, 0, 1 )
position = Vector2( -903, -229 )
shape = SubResource( 16 )
disabled = true

[node name="CollisionShape2D11" type="CollisionShape2D" parent="Area2DAllways" groups=["Ground", "NoStaticBody"]]
modulate = Color( 0, 1, 0, 1 )
position = Vector2( -905, 136 )
shape = SubResource( 19 )

[node name="YSort" type="YSort" parent="."]

[node name="PlayerAnimated" parent="YSort" instance=ExtResource( 47 )]
position = Vector2( -955, -72 )

[node name="Grass1" type="Sprite" parent="YSort"]
position = Vector2( -806, 287 )
texture = ExtResource( 50 )
offset = Vector2( 0, -6 )

[node name="Grass2" type="Sprite" parent="YSort"]
position = Vector2( -841, 320 )
texture = ExtResource( 50 )
offset = Vector2( 0, -6 )

[node name="Grass3" type="Sprite" parent="YSort"]
position = Vector2( -371, 300 )
texture = ExtResource( 50 )
offset = Vector2( 0, -6 )

[node name="Grass4" type="Sprite" parent="YSort"]
position = Vector2( -48, 301 )
texture = ExtResource( 50 )
offset = Vector2( 0, -6 )

[node name="Grass5" type="Sprite" parent="YSort"]
position = Vector2( 10, 321 )
texture = ExtResource( 50 )
offset = Vector2( 0, -6 )

[node name="Grass6" type="Sprite" parent="YSort"]
position = Vector2( 335, 394 )
texture = ExtResource( 50 )
offset = Vector2( 0, -6 )

[node name="Grass7" type="Sprite" parent="YSort"]
position = Vector2( 578, 358 )
texture = ExtResource( 50 )
offset = Vector2( 0, -6 )

[node name="Grass8" type="Sprite" parent="YSort"]
position = Vector2( 955, 389 )
texture = ExtResource( 50 )
offset = Vector2( 0, -6 )

[node name="DONOTPASS" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DONOTPASS"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -1078, 29 )
shape = SubResource( 20 )

[connection signal="area_entered" from="YSort/PlayerAnimated/CLIMBDTC" to="." method="_on_CLIMBDTC_area_entered"]
[connection signal="area_exited" from="YSort/PlayerAnimated/CLIMBDTC" to="." method="_on_CLIMBDTC_area_exited"]
[connection signal="area_entered" from="YSort/PlayerAnimated/OpenDirDTC" to="." method="_on_OpenDirDTC_area_entered"]
[connection signal="area_exited" from="YSort/PlayerAnimated/OpenDirDTC" to="." method="_on_OpenDirDTC_area_exited"]

[editable path="YSort/PlayerAnimated"]
